<resources>
    <string name="app_name">Task Assigning and Planning</string>

    <string name="nav_header_title">Full Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>


    <!--Navigation Drawer-->
    <string name="menu_plan">Start Plan</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_profile">Account</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_team">Plans</string>

    <!--Plan Fragment - Starting a plan-->
    <string name="plan_description">Plan Title</string>
    <string name="plan_start_date">Starting Date</string>
    <string name="plan_end_date">Ending Date</string>
    <string name="plan_owner">Plan Manager</string>

    <!--Bottom Navigation-->
    <string name="title_activities">Activities</string>
    <string name="title_progress">Progress</string>
    <string name="title_task">Tasks</string>
    <string name="title_chart">Progress Chart</string>
    <string name="title_team">Teams</string>

    <!--ListView Activities Fragment-->
    <string name="text_task_name">New Task</string>
    <string name="text_note">Notes</string>

    <!--Adding Activities through dialog-->
    <string name="dialog_activity_title">Activity title</string>
    <string name="dialog_start_date">Date Start</string>
    <string name="dialog_end_date">Date End</string>
    <string name="dialog_button_add"> Add</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_assign_activity">Assign person</string>
    <string name="dialog_pick_color">Color</string>

    <!--Error fields Login/Register-->
    <string name="input_error_name">Full name is required</string>
    <string name="input_error_email">Email is required</string>
    <string name="input_error_password">Password is required</string>
    <string name="input_error_email_invalid">Enter a valid email</string>

    <string name="registration_success">Registered Successfully</string>

    <!--Error fields plan-->
    <string name="input_error_plan">Please enter your plan name</string>
    <string name="input_error_start_date">When is your plan start?</string>
    <string name="input_error_end_date">When will it end?</string>

    <!-- Dialog/Fragment names -->
    <string name="dialog_new_note">New Note Dialog</string>

    <!--Error fields plan-->
    <string name="input_error_activity">Please enter activity name</string>
    <string name="input_error_start_date_activity">When is your activity start?</string>
    <string name="input_error_end_date_activity">When will it end?</string>

    <!--Use this later for generating token-->
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!--layout_row_plan_notification-->
    <string name="plan_row_title">Title</string>
    <string name="plan_row_from">From</string>

    <!--layout_row_request-->
    <string name="notification_row_title">Title</string>
    <string name="notification_row_sender">Request From: </string>
    <string name="notification_row_from">Name</string>
    <string name="notification_row_btn_accept">Accept</string>
    <string name="notification_row_btn_ignore">Ignore</string>

    <!--dialog_confirm_progress-->
    <string name="dialog_confirm_progress">Do you want to finish this task?</string>
    <string name="dialog_confirm_yes">Finish Task</string>
    <string name="dialog_confirm_no">Cancel</string>

</resources>