<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_plan"
            android:title="@string/menu_plan" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_identity"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
    </group>

</menu>