<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

   <fragment
       android:id="@+id/nav_plan"
       android:name="com.tap.taskassigningandplanning.ui.plan.PlanFragment"
       android:label="@string/menu_plan"
       tools:layout="@layout/fragment_plan"/>

   <fragment
       android:id="@+id/nav_notification"
       android:name="com.tap.taskassigningandplanning.ui.notification.NotificationFragment"
       android:label="@string/menu_notification"
       tools:layout="@layout/fragment_notification"/>

   <fragment
       android:id="@+id/nav_profile"
       android:name="com.tap.taskassigningandplanning.ui.profile.ProfileFragment"
       android:label="@string/menu_profile"
       tools:layout="@layout/fragment_profile" />

   <fragment
       android:id="@+id/nav_setting"
       android:name="com.tap.taskassigningandplanning.ui.setting.SettingFragment"
       android:label="@string/menu_setting"
       tools:layout="@layout/fragment_setting"/>

</navigation>