<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/etRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_progress"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialog_confirm_yes"
                android:id="@+id/btnFinish"
                android:background="?android:attr/selectableItemBackground"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnCancel"
                android:text="@string/dialog_confirm_no"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>